feat: analytics tracking enpoints and enhance UTM campaign performance features