@@ -23,12 +23,15 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.isNull;
+import static org.mockito.ArgumentMatchers.nullable;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -68,11 +71,11 @@ class AnalyticsServiceTest {
 
     @Test
     void getOverallAnalytics_With24hPeriod() {
-        when(clickEventRepository.countTotalOverallClicks(eq(1L), any(LocalDateTime.class), eq(null), eq(null), eq(null), eq(null))).thenReturn(150L);
-        when(clickEventRepository.countOverallClicksByHour(eq(1L), any(LocalDateTime.class), eq(null), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countOverallClicksByCountry(eq(1L), any(LocalDateTime.class), eq(null), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countOverallClicksByDevice(eq(1L), any(LocalDateTime.class), eq(null), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countOverallClicksByBrowser(eq(1L), any(LocalDateTime.class), eq(null), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countTotalOverallClicks(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(null), eq(null))).thenReturn(150L);
+        when(clickEventRepository.countOverallClicksByHour(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countOverallClicksByCountry(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countOverallClicksByDevice(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countOverallClicksByBrowser(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
 
         AnalyticsResponseDto response = analyticsService.getOverallAnalytics(currentUser, "24h", null, null, null, null, null);
 
@@ -82,11 +85,11 @@ class AnalyticsServiceTest {
 
     @Test
     void getOverallAnalytics_WithTagFiltersAndDailyPeriod() {
-        when(clickEventRepository.countTotalOverallClicks(eq(1L), any(LocalDateTime.class), eq(null), eq(null), eq(List.of(10L)), eq(5L))).thenReturn(50L);
-        when(clickEventRepository.countOverallClicksByDate(eq(1L), any(LocalDateTime.class), eq(null), eq(null), eq(List.of(10L)), eq(5L))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countOverallClicksByCountry(eq(1L), any(LocalDateTime.class), eq(null), eq(null), eq(List.of(10L)), eq(5L))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countOverallClicksByDevice(eq(1L), any(LocalDateTime.class), eq(null), eq(null), eq(List.of(10L)), eq(5L))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countOverallClicksByBrowser(eq(1L), any(LocalDateTime.class), eq(null), eq(null), eq(List.of(10L)), eq(5L))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countTotalOverallClicks(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(List.of(10L)), eq(5L))).thenReturn(50L);
+        when(clickEventRepository.countOverallClicksByDate(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(List.of(10L)), eq(5L))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countOverallClicksByCountry(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(List.of(10L)), eq(5L))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countOverallClicksByDevice(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(List.of(10L)), eq(5L))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countOverallClicksByBrowser(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(List.of(10L)), eq(5L))).thenReturn(Collections.emptyList());
 
         List<Long> tagIds = new ArrayList<>();
         tagIds.add(null);
@@ -102,11 +105,11 @@ class AnalyticsServiceTest {
 
     @Test
     void getOverallAnalytics_EmptyTagIds_TreatedAsNull() {
-        when(clickEventRepository.countTotalOverallClicks(eq(1L), any(LocalDateTime.class), eq(null), eq(null), isNull(), eq(null))).thenReturn(0L);
-        when(clickEventRepository.countOverallClicksByDate(eq(1L), any(LocalDateTime.class), eq(null), eq(null), isNull(), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countOverallClicksByCountry(eq(1L), any(LocalDateTime.class), eq(null), eq(null), isNull(), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countOverallClicksByDevice(eq(1L), any(LocalDateTime.class), eq(null), eq(null), isNull(), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countOverallClicksByBrowser(eq(1L), any(LocalDateTime.class), eq(null), eq(null), isNull(), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countTotalOverallClicks(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), isNull(), eq(null))).thenReturn(0L);
+        when(clickEventRepository.countOverallClicksByDate(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), isNull(), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countOverallClicksByCountry(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), isNull(), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countOverallClicksByDevice(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), isNull(), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countOverallClicksByBrowser(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), isNull(), eq(null))).thenReturn(Collections.emptyList());
 
         List<Long> tagIds = List.of(0L, -5L);
         AnalyticsResponseDto response = analyticsService.getOverallAnalytics(currentUser, "30d", null, null, null, tagIds, null);
@@ -118,11 +121,11 @@ class AnalyticsServiceTest {
     void getLinkAnalytics_Success_RegularUser() {
         Url url = Url.builder().id(100L).user(currentUser).build();
         when(urlRepository.findByShortUrl("hash123")).thenReturn(url);
-        when(clickEventRepository.countByUrl_Id(eq(100L), any(LocalDateTime.class), eq(null))).thenReturn(50L);
-        when(clickEventRepository.countByDateForUrl(eq(100L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countByCountryForUrl(eq(100L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countByDeviceForUrl(eq(100L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countByBrowserForUrl(eq(100L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countByUrl_Id(eq(100L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(50L);
+        when(clickEventRepository.countByDateForUrl(eq(100L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countByCountryForUrl(eq(100L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countByDeviceForUrl(eq(100L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countByBrowserForUrl(eq(100L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
 
         AnalyticsResponseDto response = analyticsService.getAnalytics("hash123", currentUser, "7d", null, null);
 
@@ -135,11 +138,11 @@ class AnalyticsServiceTest {
         User rootUser = User.builder().id(99L).role(Role.ROOT).build();
         Url url = Url.builder().id(100L).user(currentUser).build();
         when(urlRepository.findByShortUrl("hash123")).thenReturn(url);
-        when(clickEventRepository.countByUrl_Id(eq(100L), any(LocalDateTime.class), eq(null))).thenReturn(50L);
-        when(clickEventRepository.countByDateForUrl(eq(100L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countByCountryForUrl(eq(100L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countByDeviceForUrl(eq(100L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countByBrowserForUrl(eq(100L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countByUrl_Id(eq(100L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(50L);
+        when(clickEventRepository.countByDateForUrl(eq(100L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countByCountryForUrl(eq(100L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countByDeviceForUrl(eq(100L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countByBrowserForUrl(eq(100L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
 
         AnalyticsResponseDto response = analyticsService.getAnalytics("hash123", rootUser, "7d", null, null);
 
@@ -169,11 +172,11 @@ class AnalyticsServiceTest {
     void getFolderAnalytics_Success_RegularUser() {
         Folder folder = Folder.builder().id(50L).user(currentUser).build();
         when(folderRepository.findById(50L)).thenReturn(Optional.of(folder));
-        when(clickEventRepository.countTotalFolderClicks(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(75L);
-        when(clickEventRepository.countFolderClicksByDate(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countFolderClicksByCountry(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countFolderClicksByDevice(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countFolderClicksByBrowser(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countTotalFolderClicks(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(75L);
+        when(clickEventRepository.countFolderClicksByDate(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countFolderClicksByCountry(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countFolderClicksByDevice(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countFolderClicksByBrowser(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
 
         AnalyticsResponseDto response = analyticsService.getFolderAnalytics(50L, currentUser, "all", null, null);
 
@@ -186,11 +189,11 @@ class AnalyticsServiceTest {
         User rootUser = User.builder().id(99L).role(Role.ROOT).build();
         Folder folder = Folder.builder().id(50L).user(currentUser).build();
         when(folderRepository.findById(50L)).thenReturn(Optional.of(folder));
-        when(clickEventRepository.countTotalFolderClicks(eq(50L), eq(99L), any(LocalDateTime.class), eq(null))).thenReturn(75L);
-        when(clickEventRepository.countFolderClicksByDate(eq(50L), eq(99L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countFolderClicksByCountry(eq(50L), eq(99L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countFolderClicksByDevice(eq(50L), eq(99L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countFolderClicksByBrowser(eq(50L), eq(99L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countTotalFolderClicks(eq(50L), eq(99L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(75L);
+        when(clickEventRepository.countFolderClicksByDate(eq(50L), eq(99L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countFolderClicksByCountry(eq(50L), eq(99L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countFolderClicksByDevice(eq(50L), eq(99L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countFolderClicksByBrowser(eq(50L), eq(99L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
 
         AnalyticsResponseDto response = analyticsService.getFolderAnalytics(50L, rootUser, "all", null, null);
 
@@ -220,11 +223,11 @@ class AnalyticsServiceTest {
         Folder folder = Folder.builder().id(50L).user(currentUser).build();
         when(folderRepository.findByUserIdAndSlug(1L, "marketing-2026")).thenReturn(Optional.of(folder));
         when(folderRepository.findById(50L)).thenReturn(Optional.of(folder));
-        when(clickEventRepository.countTotalFolderClicks(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(75L);
-        when(clickEventRepository.countFolderClicksByDate(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countFolderClicksByCountry(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countFolderClicksByDevice(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countFolderClicksByBrowser(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countTotalFolderClicks(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(75L);
+        when(clickEventRepository.countFolderClicksByDate(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countFolderClicksByCountry(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countFolderClicksByDevice(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countFolderClicksByBrowser(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
 
         AnalyticsResponseDto response = analyticsService.getFolderAnalyticsBySlug("marketing-2026", currentUser, "all", null, null);
 
@@ -236,11 +239,11 @@ class AnalyticsServiceTest {
     void getFolderAnalytics_HourlyGranularity() {
         Folder folder = Folder.builder().id(50L).user(currentUser).build();
         when(folderRepository.findById(50L)).thenReturn(Optional.of(folder));
-        when(clickEventRepository.countTotalFolderClicks(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(75L);
-        when(clickEventRepository.countFolderClicksByHour(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countFolderClicksByCountry(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countFolderClicksByDevice(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countFolderClicksByBrowser(eq(50L), eq(1L), any(LocalDateTime.class), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countTotalFolderClicks(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(75L);
+        when(clickEventRepository.countFolderClicksByHour(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countFolderClicksByCountry(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countFolderClicksByDevice(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countFolderClicksByBrowser(eq(50L), eq(1L), any(LocalDateTime.class), any(LocalDateTime.class))).thenReturn(Collections.emptyList());
 
         AnalyticsResponseDto response = analyticsService.getFolderAnalytics(50L, currentUser, "24h", null, null);
 
@@ -249,15 +252,15 @@ class AnalyticsServiceTest {
 
     @Test
     void dateRangeFiltering_CustomDates_InvalidFallback() {
-        when(clickEventRepository.countTotalOverallClicks(eq(1L), any(), isNull(), eq(null), eq(null), eq(null))).thenReturn(100L);
-        when(clickEventRepository.countOverallClicksByDate(eq(1L), any(), isNull(), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countOverallClicksByCountry(eq(1L), any(), isNull(), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countOverallClicksByDevice(eq(1L), any(), isNull(), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
-        when(clickEventRepository.countOverallClicksByBrowser(eq(1L), any(), isNull(), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countTotalOverallClicks(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(null), eq(null))).thenReturn(100L);
+        when(clickEventRepository.countOverallClicksByDate(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countOverallClicksByCountry(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countOverallClicksByDevice(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
+        when(clickEventRepository.countOverallClicksByBrowser(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(null), eq(null))).thenReturn(Collections.emptyList());
 
         analyticsService.getOverallAnalytics(currentUser, null, "invalid-date", "invalid-date", null, null, null);
 
-        verify(clickEventRepository).countTotalOverallClicks(eq(1L), any(LocalDateTime.class), isNull(), eq(null), eq(null), eq(null));
+        verify(clickEventRepository).countTotalOverallClicks(eq(1L), any(LocalDateTime.class), any(LocalDateTime.class), eq(null), eq(null), eq(null));
     }
 
     @Test
@@ -277,6 +280,26 @@ class AnalyticsServiceTest {
         verify(clickEventRepository).save(any(ClickEvent.class));
         verify(urlRepository).save(url);
         assertThat(statistic.getAccessedTimes()).isEqualTo(1L);
+    }
+
+    @Test
+    void trackClick_WithUtmAndReferer() {
+        Url url = Url.builder().id(10L).shortUrl("clickHash").longUrl("https://example.com?utm_source=meta&utm_medium=cpc").build();
+        when(urlRepository.findByShortUrl("clickHash")).thenReturn(url);
+
+        when(userAgentParserService.parse(any()))
+                .thenReturn(new UserAgentParserService.DeviceInfo("Mobile", "Safari", "iOS"));
+        when(geoLocationService.lookup(any()))
+                .thenReturn(new GeoLocationService.GeoInfo("Canada", "Toronto", "Ontario", "North America"));
+
+        analyticsService.trackClick("clickHash", "Safari-UA", "1.2.3.4", "https://t.co/xyz", Map.of("utm_campaign", "summer_launch"));
+
+        verify(clickEventRepository).save(argThat(event -> 
+            "meta".equals(event.getUtmSource()) &&
+            "cpc".equals(event.getUtmMedium()) &&
+            "summer_launch".equals(event.getUtmCampaign()) &&
+            "t.co".equals(event.getReferer())
+        ));
     }
 
     @Test
@@ -316,12 +339,10 @@ class AnalyticsServiceTest {
         LocalDateTime start = LocalDateTime.now().minusHours(3);
         LocalDateTime end = LocalDateTime.now();
 
-        // start after end -> returns rawData
         List<ClickDataPoint> raw = List.of(new ClickDataPoint("2026-08-30T10:00:00", 2L));
         List<ClickDataPoint> resultSwapped = ReflectionTestUtils.invokeMethod(analyticsService, "fillMissingHours", raw, end, start);
         assertThat(resultSwapped).isEqualTo(raw);
 
-        // start is 1970 and rawData has date
         List<ClickDataPoint> rawWithDate = List.of(
                 new ClickDataPoint("2026-08-30 10:00:00", 3L),
                 new ClickDataPoint("2026-08-30", 1L),
@@ -330,7 +351,6 @@ class AnalyticsServiceTest {
         List<ClickDataPoint> result1970 = ReflectionTestUtils.invokeMethod(analyticsService, "fillMissingHours", rawWithDate, LocalDateTime.of(1970, 1, 1, 0, 0), null);
         assertThat(result1970).isNotEmpty();
 
-        // start is 1970 and rawData empty
         List<ClickDataPoint> resultEmpty = ReflectionTestUtils.invokeMethod(analyticsService, "fillMissingHours", Collections.emptyList(), null, null);
         assertThat(resultEmpty).isNotEmpty();
     }
@@ -340,12 +360,10 @@ class AnalyticsServiceTest {
         LocalDateTime start = LocalDateTime.now().minusDays(3);
         LocalDateTime end = LocalDateTime.now();
 
-        // start after end -> returns rawData
         List<ClickDataPoint> raw = List.of(new ClickDataPoint("2026-08-30", 2L));
         List<ClickDataPoint> resultSwapped = ReflectionTestUtils.invokeMethod(analyticsService, "fillMissingDates", raw, end, start);
         assertThat(resultSwapped).isEqualTo(raw);
 
-        // start is 1970 and rawData has date
         List<ClickDataPoint> rawWithDate = List.of(
                 new ClickDataPoint("2026-08-28", 3L),
                 new ClickDataPoint("bad-date", 1L)
@@ -353,26 +371,29 @@ class AnalyticsServiceTest {
         List<ClickDataPoint> result1970 = ReflectionTestUtils.invokeMethod(analyticsService, "fillMissingDates", rawWithDate, LocalDateTime.of(1970, 1, 1, 0, 0), null);
         assertThat(result1970).isNotEmpty();
 
-        // start is 1970 and rawData empty
         List<ClickDataPoint> resultEmpty = ReflectionTestUtils.invokeMethod(analyticsService, "fillMissingDates", Collections.emptyList(), null, null);
         assertThat(resultEmpty).isNotEmpty();
     }
 
     @Test
-    void getStartDateFromPeriod_Branches() {
-        assertThat((LocalDateTime) ReflectionTestUtils.invokeMethod(analyticsService, "getStartDateFromPeriod", (Object) null))
-                .isEqualTo(LocalDateTime.of(1970, 1, 1, 0, 0));
-        assertThat((LocalDateTime) ReflectionTestUtils.invokeMethod(analyticsService, "getStartDateFromPeriod", "24h")).isNotNull();
-        assertThat((LocalDateTime) ReflectionTestUtils.invokeMethod(analyticsService, "getStartDateFromPeriod", "7d")).isNotNull();
-        assertThat((LocalDateTime) ReflectionTestUtils.invokeMethod(analyticsService, "getStartDateFromPeriod", "30d")).isNotNull();
-        assertThat((LocalDateTime) ReflectionTestUtils.invokeMethod(analyticsService, "getStartDateFromPeriod", "ytd"))
-                .isEqualTo(LocalDateTime.of(1970, 1, 1, 0, 0));
+    void parseDates_Branches() {
+        Object range24h = ReflectionTestUtils.invokeMethod(analyticsService, "parseDates", null, null, "24h");
+        assertThat(range24h).isNotNull();
+
+        Object range7d = ReflectionTestUtils.invokeMethod(analyticsService, "parseDates", null, null, "7d");
+        assertThat(range7d).isNotNull();
+
+        Object range30d = ReflectionTestUtils.invokeMethod(analyticsService, "parseDates", null, null, "30d");
+        assertThat(range30d).isNotNull();
+
+        Object rangeAll = ReflectionTestUtils.invokeMethod(analyticsService, "parseDates", null, null, "all");
+        assertThat(rangeAll).isNotNull();
     }
 
     @Test
     void hashIp_Branches() {
-        assertThat((String) ReflectionTestUtils.invokeMethod(analyticsService, "hashIp", (Object) null)).isEqualTo("unknown");
-        assertThat((String) ReflectionTestUtils.invokeMethod(analyticsService, "hashIp", "   ")).isEqualTo("unknown");
+        assertThat((String) ReflectionTestUtils.invokeMethod(analyticsService, "hashIp", (Object) null)).isEqualTo("0000000000000000");
+        assertThat((String) ReflectionTestUtils.invokeMethod(analyticsService, "hashIp", "   ")).isEqualTo("0000000000000000");
         String hash = ReflectionTestUtils.invokeMethod(analyticsService, "hashIp", "192.168.1.1");
         assertThat(hash).hasSize(16);
     }
